gh-60: Adding all island report tally sheet
